--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <main>
         <div class="container">
             <div class="api-key-section">
-                <label for="apiKey">Ваш API-ключ:</label>
-                <input type="password" id="apiKey" placeholder="Введите ваш API-ключ">
+                <label for="apiKey">Ваш API-ключ OpenAI:</label>
+                <input type="password" id="apiKey" placeholder="Введите ваш OpenAI API-ключ">
                 <button id="saveApiKey" class="btn">Сохранить</button>
+                <p class="api-key-help">Вы можете получить API-ключ на <a href="https://platform.openai.com/api-keys" target="_blank">https://platform.openai.com/api-keys</a></p>
             </div>
 
             <div class="features">
